# AGENTIC_AI

./: ASSIGNMENT_NO_6.ipynb  Assignment_NO_2.ipynb  Assignment_NO_3.ipynb  Assignment_NO_5_Exploring_2_0_Exp.ipynb  Assignment_no_4_aisuite.ipynb  LANGCHAIN_Project_no_1.ipynb  PROJECT_NO_1_Langchain.ipynb  Project_NO_3__Tool_Calling.ipynb  RAG_Project_No_2.ipynb  assignement2.md  assignment1.md  weather_gpt.py
Assignment_No_11/: hello.py  pyproject.toml
Assignment_No_11/src/assignment_no_11/: __init__.py
